--- a/csp project/Credit.html
+++ b/csp project/Credit.html
@@ -55,3 +55,7 @@
 <body style="background-color:dimgrey;">
    <p style="color:white;">Credit:http://www.gsfdcy.com/data/img1/79/2062827-smooth-wallpaper.jpg
     https://elgoog.im/t-rex/</p>
+    <p style="color:white;">http://www.takeogyotaku.com/lineup.jpg/</p>
+     <p style="color:white;">https://cnet2.cbsistatic.com/img/_SI20yYcRqr9oDisCLRy5YxLAGU=/185x0:1248x597/1600x900/2019/04/25/cbbd59f1-ae6a-443c-8a7e-9d049531b504/screen-shot-2019-04-25-at-10-45-04-am.png/</p>
+    
+    
